<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zerospy"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/logo_right_color"/>

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:src="@drawable/app_logo"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/passwordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_new_password"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/submitPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
